Fix video alignment

--- a/_sass/_04-notre-organisme.scss
+++ b/_sass/_04-notre-organisme.scss
@@ -92,6 +92,19 @@
 
       }
 
+      // Row alignment for different viewport sizes / responsive
+      @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        &:nth-child(2n+1) {
+          clear: both;
+        }
+      }
+
+      @media (min-width: $screen-md-min) {
+        &:nth-child(3n+1) {
+          clear: both;
+        }
+      }
+
     }
 
   }
